# ChakraCoreClone

./: .gitignore  CMakeLists.txt  azure-pipelines.yml
lib/: CMakeLists.txt
lib/wabt/: CMakeLists.txt
lib/wabt/chakra/: wabtapi.cc  wabtapi.h
lib/wabt/src/: option-parser.cc  type.h
test/WasmSpec/: rlexe.xml
